# RadioChat

./: .gitignore  README.md  docker-compose.yml
client/: package-lock.json
client/src/: App.css  App.js  PrivateRoute.js  authContext.js
client/src/Components/: HomePage.jsx  Login.jsx  LoginPage.jsx  Register.jsx  RegisterPage.jsx  Users.jsx
server/: Cargo.toml  chat.html
server/src/: config.rs  main.rs
server/src/handlers/: handlers.rs  mod.rs  server.rs  sessions.rs
server/src/models/: mod.rs  model.rs  user_queries.rs  user_service.rs
server/static/: app.js  create_user_form.html
sql/: init-db.sql
