[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
jsonwebtoken = "9.2.0"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "json",
    "postgres",
    "uuid",
    "chrono",
] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1"
dotenv = "0.15.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
